		commands.

	mbsebbs:
		Fixed recognition of tar.gz files.
		Added menu function display file.
		Display ascii textfiles now uses the More Y/n/= prompt.

	mbcico:
		Removed some heavy debug code from ttyio functions to increase
		throughput.
		Standarized raw ifcico protocol logging.
		Some minor changes to the raw ifcico protocol, better error
		checking and a check for buffer overflow.

	lang:
		New language prompt number 17.
		Erased language prompts 18..36.


v0.37.2		23-Feb-2003 - 09-Apr-2003

	general:
		System prepared for setting the official FTSC product code,
		this will be 0x11FF. The code is not yet activated.
		Removed external (sysop) chat, chat paging times and other
		chat stuff that is of no use anymore. The sysop shows his
		presence by running mbmon. The mbchat program is obsolete.
		Menu item 22 is added, this is user chat session.
		For chat (and sysop/user paging chat) works now using the
		mbtask daemon.

	common.a:
		New function to get the real case of a filename.

	mbfido:
		Finding the inbound tic file now uses the new function.

	mbfile:
		When a file was deleted for age or download age, the 8.3
		filename was not removed from disk.
		A better check againts empty upload dates when purging files.
		Also added a log when this happens. Please report if you see
		any of these.

	examples:
		Removed the last menu item from the offline menu, added new
		Extended Info toggle (English only).
		Updated offline textfiles to remove point download and add
		new Extended Info toggle (English only).

	mbsebbs:
		Offline reader, the reply packets are now handled complete
		case insensitive.
		Dropped BlueWave v2 format completly, obsolete format.
		The BlueWave and QWK download packets can have kludges, this
		depends on a setting in the userbase.
		In downloaded netmail, if message comes from a point, the FMPT
		kludge is allways included in the message.
		Added some forgotten checks for a valid QWK board name.